button outline fixed & navbar z-index

--- a/source/css/mobile/_backtop.scss
+++ b/source/css/mobile/_backtop.scss
@@ -4,6 +4,7 @@ button#backtop {
     right: -10%;
     border: none;
     background-color: rgba(255,255,255,0);
+    outline: none;
     img {
         width: 20%;
         height: 20%;
