--- a/source/css/mobile/_navbar.scss
+++ b/source/css/mobile/_navbar.scss
@@ -3,6 +3,7 @@
     height: 3rem;
     position: fixed;
     top: 0;
+    z-index: 10;
     background-color: #fff;
     margin-bottom: .5rem;
     a {
